Update src/client/ui/userView/landingPage/UserLandingPageVM.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>